--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "scss": "node-sass --watch scss -o css"
+        "sass": "sass --watch src/styles:public/stylesheets"
     },
     "repository": {
         "type": "git",
